[gd_scene load_steps=7 format=3 uid="uid://cnd3fcoym7bso"]

[ext_resource type="Theme" uid="uid://k46f0s05vcwm" path="res://media/themes/MainTheme.tres" id="1_juy2o"]
[ext_resource type="Script" path="res://ui/work.gd" id="2_duxej"]
[ext_resource type="Texture2D" uid="uid://dwbqpkpc7f264" path="res://assets/textures/copybook/texture.jpg" id="3_8637n"]
[ext_resource type="AudioStream" uid="uid://b7l2etvykox10" path="res://sounds/work/work_sound.mp3" id="4_pq274"]

[sub_resource type="LabelSettings" id="LabelSettings_jn254"]
font_size = 64
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1rppo"]
font_size = 26
font_color = Color(0, 0, 0, 1)

[node name="Work" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_juy2o")
script = ExtResource("2_duxej")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="copybook" type="TextureRect" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8637n")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="mark" type="Label" parent="copybook"]
layout_mode = 0
offset_left = 363.0
offset_top = 370.0
offset_right = 428.0
offset_bottom = 458.0
text = "5"
label_settings = SubResource("LabelSettings_jn254")

[node name="Task" type="Control" parent="copybook"]
anchors_preset = 0
offset_left = -384.0
offset_top = -104.0
offset_right = -344.0
offset_bottom = -64.0

[node name="task_lable" type="Label" parent="copybook/Task"]
layout_mode = 0
offset_left = 419.0
offset_top = 124.0
offset_right = 827.0
offset_bottom = 174.0
text = "Задание 1"
label_settings = SubResource("LabelSettings_1rppo")
clip_text = true

[node name="task_text" type="Label" parent="copybook/Task"]
layout_mode = 0
offset_left = 419.0
offset_top = 174.0
offset_right = 827.0
offset_bottom = 224.0
text = "Решите: 2 + 2 = ..."
label_settings = SubResource("LabelSettings_1rppo")
clip_text = true

[node name="LineEdit" type="LineEdit" parent="copybook/Task"]
layout_mode = 0
offset_left = 419.0
offset_top = 224.0
offset_right = 618.0
offset_bottom = 266.0
focus_next = NodePath(".")
theme_override_font_sizes/font_size = 24
placeholder_text = "..."
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="enter" type="Button" parent="copybook"]
layout_mode = 0
offset_left = 35.0
offset_top = 179.0
offset_right = 168.0
offset_bottom = 232.0
text = "Ответить"

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pq274")
volume_db = -25.0

[connection signal="text_submitted" from="copybook/Task/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="copybook/enter" to="." method="_on_enter_pressed"]
